--- a/textbook_problems/CMakeLists.txt
+++ b/textbook_problems/CMakeLists.txt
@@ -3,3 +3,9 @@ add_executable(8_3_3_04 8_3_3_04.cpp)
 add_executable(8_4_3_heap 8_4_3_heap.cpp)
 
 add_executable(number_code number_code.cpp)
+
+add_executable(isa isa.cpp)
+
+add_executable(assember assember.cpp)
+
+add_executable(assember2 assember2.cpp)
