--- a/LeetCode/CMakeLists.txt
+++ b/LeetCode/CMakeLists.txt
@@ -3,3 +3,5 @@ add_executable(lc240401 lc240401.cpp)
 add_executable(lc240423 lc240423.cpp)
 add_executable(lc1146 lc1146.cpp)
 add_executable(lc1329 lc1329.cpp)
+add_executable(lc826 lc826.cpp)
+add_executable(lc2951 lc2951.cpp)
