--- a/pat/CMakeLists.txt
+++ b/pat/CMakeLists.txt
@@ -1,2 +1,7 @@
-add_executable(1001 1001.cpp)
-add_executable(1001_standard 1001_standard.cpp)
+add_subdirectory(top)
+
+add_executable(1001_1 1001.cpp)
+add_executable(1002 1002.cpp)
+add_executable(1002_fix 1002_fix.cpp)
+add_executable(1002_fix2 1002_fix2.cpp)
+add_executable(1002_fix3 1002_fix3.cpp)
